@@ -14,6 +14,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 === Fixed
 
 * Configure overflow content in tab panel to scroll horizontally
+* Set background on tabs properly so background does not bleed through
 
 == 1.0.0-alpha.8 (2022-11-30) - @mojavelinux
 
